# Valorant-Stats

./: .env_example  .gitignore  LICENSE  README.md  Valorant API.md  main.py  match output.html  output.html  pyproject.toml  rib_discovery_results.json  ribs_scrape.py  riot.txt  supabase_schemas.sql  valorant-stats.ipynb
src/backend/api_connectors/: ribs_connector.py
src/backend/database_connectors/: supabase_connectors.py
src/backend/sql/: README.md  dbt_project.yml  profiles.yml  pyproject.toml
src/backend/sql/models/marts/: select_1_plus_10.sql
src/config/: .env_example
