[project]
name = "valorant-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=6.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "polars>=1.41.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "requests-ip-rotator>=1.0.18",
    "sqlalchemy>=2.0.50",
    "supabase>=2.30.1",
]
